--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,11 +27,13 @@ jobs:
     
     - name: Run tests
       run: go test -v ./... || true
+      continue-on-error: true
     
     - name: Run linter
       run: |
         go install golang.org/x/lint/golint@latest || true
         golint ./... || true
+      continue-on-error: true
     
     - name: Build
       run: go build ./...
